<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.favre.tools</groupId>
    <artifactId>uber-apk-signer</artifactId>
    <version>0.8.4</version>

    <prerequisites>
        <maven>3.1.0</maven>
    </prerequisites>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
    <repositories>
        <repository>
            <id>maven-central-repo</id>
            <url>http://repo1.maven.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>8.4</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <configuration>
                    <excludes>
                        <!-- excludes system scoped dependencies -->
                        <exclude>**/lib/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.3.0</version>
                <configuration>
                    <dryRun>false</dryRun>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <compilerId>javac-with-errorprone</compilerId>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <source>8</source>
                    <target>8</target>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.plexus</groupId>
                        <artifactId>plexus-compiler-javac-errorprone</artifactId>
                        <version>2.8.1</version>
                    </dependency>
                    <!-- override plexus-compiler-javac-errorprone's dependency on
                         Error Prone with the latest version -->
                    <dependency>
                        <groupId>com.google.errorprone</groupId>
                        <artifactId>error_prone_core</artifactId>
                        <version>2.0.17</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>at.favre.tools.apksigner.SignTool</mainClass>
                                    <manifestEntries>
                                        <Implementation-Version>${project.version}</Implementation-Version>
                                    </manifestEntries>
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                                    <resources>
                                        <resource>/lib</resource>
                                    </resources>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.googlecode.addjars-maven-plugin</groupId>
                <artifactId>addjars-maven-plugin</artifactId>
                <version>1.0.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>add-jars</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/src/main/resources/lib</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jarsigner-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <id>sign</id>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skip>false</skip> <!-- set this to true if fail because of missing credentials -->
                    <keystore>${project.basedir}/keystore.jks</keystore>
                    <alias>pfopensource</alias>
                    <storepass>${env.OPENSOURCE_PROJECTS_KS_PW}</storepass>
                    <keypass>${env.OPENSOURCE_PROJECTS_KEY_PW}</keypass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.nicoulaj.maven.plugins</groupId>
                <artifactId>checksum-maven-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>artifacts</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <algorithms>
                        <algorithm>SHA-256</algorithm>
                    </algorithms>
                    <shasumSummary>true</shasumSummary>
                    <shasumSummaryFile>checksum-sha256.txt</shasumSummaryFile>
                    <attachChecksums>false</attachChecksums>
                    <quiet>false</quiet>
                </configuration>
            </plugin>
            <!--<plugin>-->
            <!--<groupId>com.akathist.maven.plugins.launch4j</groupId>-->
            <!--<artifactId>launch4j-maven-plugin</artifactId>-->
            <!--<version>1.7.15</version>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<id>l4j-clui</id>-->
            <!--<phase>package</phase>-->
            <!--<goals>-->
            <!--<goal>launch4j</goal>-->
            <!--</goals>-->
            <!--<configuration>-->
            <!--<headerType>console</headerType>-->
            <!--<outfile>target/usigner.exe</outfile>-->
            <!--&lt;!&ndash;<icon>icon.ico</icon>&ndash;&gt;-->
            <!--<jar>target/uber-apk-signer-${project.version}.jar</jar>-->
            <!--<errTitle>uber-apk-signer</errTitle>-->
            <!--<classPath>-->
            <!--<mainClass>at.favre.tools.apksigner.SignTool</mainClass>-->
            <!--<addDependencies>true</addDependencies>-->
            <!--<preCp>anything</preCp>-->
            <!--</classPath>-->
            <!--<jre>-->
            <!--<minVersion>1.8.0</minVersion>-->
            <!--<opts>-->
            <!--<opt>-Djava.endorsed.dirs=./endorsed</opt>-->
            <!--</opts>-->
            <!--</jre>-->
            <!--<versionInfo>-->
            <!--<fileVersion>0.0.0.1</fileVersion>-->
            <!--<txtFileVersion>0.0.0.1</txtFileVersion>-->
            <!--<fileDescription>A tool that enables advanced features through adb-->
            <!--</fileDescription>-->
            <!--<copyright>Patrick Favre-Bulle, 2016</copyright>-->
            <!--<productVersion>${project.version}.0</productVersion>-->
            <!--<txtProductVersion>${project.version}</txtProductVersion>-->
            <!--<productName>Uber Apk Signer</productName>-->
            <!--<internalName>uber-apk-signer</internalName>-->
            <!--<originalFilename>usigner.exe</originalFilename>-->
            <!--<language>EN</language>-->
            <!--</versionInfo>-->
            <!--</configuration>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--</plugin>-->
        </plugins>
    </build>

    <dependencies>
        <!-- command line interface -->
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.android</groupId>
            <artifactId>apksigner</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/lib/apksigner_27_0_3.jar</systemPath>
        </dependency>
        <!-- test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant</artifactId>
            <version>1.9.6</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>